Add VectorLyricsIR system
Implemented a Vector Space Information Retrieval system for lyrics search.
Includes:
- Python script using TF-IDF weighting and cosine similarity
- Ranked search results based on query relevance
- Preprocessing with tokenization, stopword filtering, and normalization
- Document vector length normalization for scoring
- Minimal requirements.txt (standard Python libraries only)

--- a/VectorLyricsIR/requirements.txt
+++ b/VectorLyricsIR/requirements.txt
@@ -1,4 +1,4 @@
-# Requirements for BooleanLyricsIR System
+# Requirements for VectorLyricsIR System
 # This project uses only Python's Standard Library.
 # No third-party packages need to be installed.
 
@@ -8,4 +8,5 @@ python >= 3.8
 # Standard Libraries used:
  - os
  - re
+ - math
  - collections
