--- a/VectorLyricsIR/requirements.txt
+++ b/VectorLyricsIR/requirements.txt
@@ -1,9 +1,10 @@
 # Requirements for VectorLyricsIR System
-# This project uses only Python's Standard Library.
-# No third-party packages need to be installed.
 
 # Minimum Python version required:
 python >= 3.8
+
+# Third-party package:
+numpy >= 1.20
 
 # Standard Libraries used:
  - os
